# 3d-object-curvature-approximation-vtk

./: .gitignore  CMakeLists.txt  README.md
src/: Question1.cpp  Question1.h  Question2.cpp  Question2.h  Question3.cpp  Question3.h  Question4.cpp  Question4.h  main.cpp
